force-app/main/default/objects/Asana_Record_Type_Mapping__mdt/Asana_Record_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Asana Record Type Mapping</label>
    <pluralLabel>Asana Record Type Mappings</pluralLabel>
</CustomObject>