force-app/main/default/objects/Asana_Record_Type_Mapping__mdt/fields/Asana_Task_Value__c.field-meta.xml
<CustomField>
    <fullName>Asana_Task_Value__c</fullName>
    <label>Asana Task Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>