force-app/main/default/objects/Asana_Record_Type_Mapping__mdt/fields/Copado_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Copado_Record_Type_Developer_Name__c</fullName>
    <label>Copado Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>